Fix logo image path and stylesheet reference
Updated logo image source and stylesheet link.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Homepage</title>
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -12,7 +12,7 @@
   <div class="header__container">
     <div class="logo">
       <span class="logo_details">
-        <img src="assets/acity_logo_hp.png" alt="School Logo" class="logo__image">
+        <img src="acity_logo_hp.png" alt="School Logo" class="logo__image">
         <div class="logo_text">A-City School Library</div>
       </span>
     </div>
@@ -61,6 +61,7 @@
 <h2>Popular Books</h2>
 <div class="book-container"></div>
 
-<script src="scripts/books.js"></script>
+<script src="books.js"></script>
 </body>
 </html>
+
