Fix HTML structure and update asset paths

--- a/login_register.html
+++ b/login_register.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login / Register</title>
-  <link rel="stylesheet" href="styles/loginstyles.css">
+  <link rel="stylesheet" href="loginstyles.css">
 </head>
 <body>
 
 <div class="login-container">
   <div class="logo">
-    <img src="assets/acity_logo.png" alt="School Logo">
+    <img src="acity_logo.png" alt="School Logo">
   </div>
 
   <h2>Login</h2>
@@ -38,3 +38,4 @@
 <script src="scripts/auth.js"></script>
 </body>
 </html>
+
