Fix script source path in login_register.html
Updated the script source path for auth.js.

--- a/login_register.html
+++ b/login_register.html
@@ -35,7 +35,8 @@
   <p class="form-message register-message"></p>
 </div>
 
-<script src="scripts/auth.js"></script>
+<script src="auth.js"></script>
 </body>
 </html>
+
 
