--- a/profile.html
+++ b/profile.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Profile</title>
-  <link rel="stylesheet" href="styles/dbstyles.css">
-  <link rel="stylesheet" href="styles/profilestyles.css">
+  <link rel="stylesheet" href="dbstyles.css">
+  <link rel="stylesheet" href="profilestyles.css">
 </head>
 <body>
 
@@ -24,7 +24,7 @@
   <div class="topbar">
     <h1>My Profile</h1>
     <div class="admin-profile-pic">
-      <img src="assets/user.png" alt="Profile Picture">
+      <img src="user.png" alt="Profile Picture">
     </div>
   </div>
 
@@ -48,3 +48,4 @@
 <script src="scripts/profile.js"></script>
 </body>
 </html>
+
